# examples-cpp

./: .gitignore  .gitmodules  Jenkinsfile  README.md  _brainCloudSetup_examples-cpp.command  autoconfig_macos.command  setupBC.sh
BasicExample/: BasicExample.sln
BasicExample/BasicExample/: App.xaml  App.xaml.cpp  App.xaml.h  BasicExample.vcxproj  BasicExample.vcxproj.filters  MainPage.xaml  MainPage.xaml.cpp  MainPage.xaml.h  Package.appxmanifest  packages.config
android/: .gitignore  README.md
android/app/: build.gradle
android/app/src/androidTest/java/com/bitheads/braincloud/android/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  ids.h  native-lib.cpp
android/app/src/main/java/com/bitheads/braincloud/android/: MainActivity.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_braincloud.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/bitheads/braincloud/android/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
autobuild/: #verify-hash.sh#  .#verify-hash.sh  _brainCloudSetup_examples-cpp.command  checkout-submodule.sh  fullbuild.bat  fullbuild.sh  generate-ids.bat  generate-ids.sh  incbuild.sh  launch-android.sh  runbuild.bat  runbuild.sh  runtests.bat  runtests.sh  setupexamplescpp.command  update-submodules.sh  verify-hash.sh  xcode-build.sh
bcchat/: .gitignore  .gitmodules  CMakeLists.txt  README.md  generate_uwp.bat
bcchat/macOS/: Podfile
bcchat/macOS/BCChat.xcodeproj/: project.pbxproj
bcchat/macOS/BCChat.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
bcchat/macOS/BCChat.xcworkspace/: contents.xcworkspacedata
bcchat/macOS/SDL3.framework/Versions/A/: SDL3
bcchat/macOS/SDL3.framework/Versions/A/Resources/: Info.plist  default.metallib
bcchat/macOS/SDL3.framework/Versions/A/_CodeSignature/: CodeResources
bcchat/src/: BCCallback.cpp  BCCallback.h  app.cpp  app.h  askForName.cpp  askForName.h  chat.cpp  chat.h  globals.cpp  globals.h  ids.h  loading.cpp  loading.h  login.cpp  login.h  mainSDL.cpp  mainUWP.cpp  menuBar.cpp  menuBar.h
bcchat/src/uwp_res/: package.appxManifest
gamelift/: README.md  server.cpp
hellobc/: .gitignore  CMakeLists.txt  README.md  ids.h  main-simple.cpp  main.cpp
relaytestapp/: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
relaytestapp/android_project/: README.md  settings.gradle
relaytestapp/android_project/app/: build.gradle
relaytestapp/android_project/app/src/androidTest/java/com/bitheads/relaybot/: ExampleInstrumentedTest.kt
relaytestapp/android_project/app/src/main/: AndroidManifest.xml
relaytestapp/android_project/app/src/main/cpp/: CMakeLists.txt
relaytestapp/android_project/app/src/main/java/com/bitheads/relaybot/: MainActivity.kt
relaytestapp/android_project/app/src/main/res/values/: strings.xml  themes.xml
relaytestapp/android_project/app/src/main/res/values-night/: themes.xml
relaytestapp/android_project/app/src/test/java/com/bitheads/relaybot/: ExampleUnitTest.kt
relaytestapp/android_project/gradle/wrapper/: gradle-wrapper.properties
relaytestapp/macOS/: Podfile
relaytestapp/macOS/BCChat.xcodeproj/: project.pbxproj
relaytestapp/src/: AppIcon.icns  BCCallback.cpp  BCCallback.h  Info.plist.in  app.cpp  app.h  game.cpp  game.h  globals.cpp  globals.h  ids.h  loading.cpp  loading.h  lobby.cpp  lobby.h  login.cpp  login.h  mainMenu.cpp  mainMenu.h  mainSDL.cpp  mainSDL3.cpp  mainUWP.cpp
relaytestapp/src/imgui/: imgui_impl_sdl.cpp
relaytestapp/src/uwp_res/: package.appxManifest
roomserver/: README.md
roomserver/client/: .gitignore  CMakeLists.txt  main.cpp
roomserver/server/: CMakeLists.txt  Dockerfile  RoomServer.cpp  RoomServer.h  main.cpp
